--- a/Manage/Users/css/module.manage.users.css
+++ b/Manage/Users/css/module.manage.users.css
@@ -15,7 +15,8 @@
 	padding-left: 1.8em;
 	}
 input.user-status {
-	background-position: 6px 4px;
+	padding-left: 2em;
+	background-position: 6px 6px;
 	}
 .user-status.status1 {
 	color: darkgreen;
@@ -164,3 +165,43 @@ span.role.role5 {
 	background-color: #FF7F7F;
 	}
 
+/*  --  RIGHTS MAP  --  */
+.acl-card {
+	border: 1px solid rgba(0, 0, 0, 0.33);
+	overflow: hidden;
+	}
+.acl-card div.bar {
+	height: 12px;
+	border-width: 1px 1px 0px 1px;
+	border-style: solid;
+	border-color: white;
+	overflow: hidden;
+	white-space: nowrap;
+	}
+.acl-card div.bar:last-child {
+	border-width: 1px;
+	height: 12px;
+	}
+.acl-card div.bar div {
+	height: 12px;
+	display: inline-block;
+	margin: 0;
+	padding: 0;
+	margin-right: 1px;
+	vertical-align: top;
+	white-space: normal;
+	}
+.acl-card div.bar div.counter {
+	width: 10%;
+	font-size: 10px;
+	margin: 0;
+	padding: 0;
+	line-height: 0.9em;
+	display: none;
+	}
+.acl-card div.bar .yes {
+	background-color: green;
+	}
+.acl-card div.bar .no {
+	background-color: #EDC;
+	}
