--- a/trunk/modules/Hydrogen/Info/Files/css/module.info.files.css
+++ b/trunk/modules/Hydrogen/Info/Files/css/module.info.files.css
@@ -1,4 +1,4 @@
-tr.folder td.folder span.name {
+tr.folder td.folder a.name {
 	display: inline-block;
 	height: 32px;
 	padding-left: 40px;
@@ -21,50 +21,50 @@ tr td.file span.name {
 	background-repeat: no-repeat;
 	padding-left: 40px;
 	}
-tr.type- td.file span.name {
+tr.type td.file span.name {
 	background-image: url(//cdn.int1a.net/img/fatcow/32/page.png);
 	}
-tr.type-js td.file span.name {
+tr.type.type-js td.file span.name {
 	background-image: url(//cdn.int1a.net/img/fatcow/32/file_extension_jar.png);
 	}
-tr.type-css td.file span.name {
+tr.type.type-css td.file span.name {
 	background-image: url(//cdn.int1a.net/img/fatcow/32/css.png);
 	}
-tr.type-doc td.file span.name,
-tr.type-odt td.file span.name,
-tr.type-docx td.file span.name {
+tr.type.type-doc td.file span.name,
+tr.type.type-odt td.file span.name,
+tr.type.type-docx td.file span.name {
 	background-image: url(//cdn.int1a.net/img/fatcow/32/file_extension_doc.png);
 	}
-tr.type-pdf td.file span.name {
+tr.type.type-pdf td.file span.name {
 	background-image: url(//cdn.int1a.net/img/fatcow/32/file_extension_pdf.png);
 	}
-tr.type-ods td.file span.name,
-tr.type-xls td.file span.name {
+tr.type.type-ods td.file span.name,
+tr.type.type-xls td.file span.name {
 	background-image: url(//cdn.int1a.net/img/fatcow/32/file_extension_xls.png);
 	}
-tr.type-png td.file span.name {
+tr.type.type-png td.file span.name {
 	background-image: url(//cdn.int1a.net/img/fatcow/32/file_extension_png.png);
 	}
-tr.type-jpeg td.file span.name,
-tr.type-jpg td.file span.name {
+tr.type.type-jpeg td.file span.name,
+tr.type.type-jpg td.file span.name {
 	background-image: url(//cdn.int1a.net/img/fatcow/32/file_extension_jpg.png);
 	}
-tr.type-7z td.file span.name {
+tr.type.type-7z td.file span.name {
 	background-image: url(//cdn.int1a.net/img/fatcow/32/file_extension_7z.png);
 	}
-tr.type-gz td.file span.name {
+tr.type.type-gz td.file span.name {
 	background-image: url(//cdn.int1a.net/img/fatcow/32/file_extension_gz.png);
 	}
-tr.type-zip td.file span.name {
+tr.type.type-zip td.file span.name {
 	background-image: url(//cdn.int1a.net/img/fatcow/32/file_extension_zip.png);
 	}
-tr.type-wmv td.file span.name {
+tr.type.type-wmv td.file span.name {
 	background-image: url(//cdn.int1a.net/img/fatcow/32/file_extension_wmv.png);
 	}
-tr.type-mpg td.file span.name,
-tr.type-mpeg td.file span.name {
+tr.type.type-mpg td.file span.name,
+tr.type.type-mpeg td.file span.name {
 	background-image: url(//cdn.int1a.net/img/fatcow/32/file_extension_mpg.png);
 	}
-tr.type-divx td.file span.name {
+tr.type.type-divx td.file span.name {
 	background-image: url(//cdn.int1a.net/img/fatcow/32/file_extension_divx.png);
 	}
