--- a/trunk/modules/Hydrogen/Admin/Instances/css/module.admin.instances.css
+++ b/trunk/modules/Hydrogen/Admin/Instances/css/module.admin.instances.css
@@ -1,6 +1,7 @@
 a.instance {
 	font-size: 1.1em;
 	background-image: url(//cdn.int1a.net/img/famfamfam/silk/world.png);
+	background-position: 1px 2px;
 	background-repeat: no-repeat;
 	padding: 1px 0px 1px 22px;
 	}
