--- a/trunk/modules/Hydrogen/Work/Notes/css/site.work.note.css
+++ b/trunk/modules/Hydrogen/Work/Notes/css/site.work.note.css
@@ -1,26 +1,26 @@
 
 
-body.site-work-note-view h1 {
+body.site-work-note-view div.note-view-content h1 {
 	font-size: 1.6em;
 	color: #00AFC4;
 	}
-body.site-work-note-view h2 {
+body.site-work-note-view div.note-view-content h2 {
 	border-bottom: 1px solid rgba(0,175,196,0.3);
 	font-size: 1.5em;
 	color: #00AFC4;
 	}
-body.site-work-note-view h3 {
+body.site-work-note-view div.note-view-content h3 {
 	border-bottom: 1px solid rgba(9,145,160,0.2);
 	font-size: 1.3em;
 	font-weight: normal;
 	color: #0991A0;
 	}
-body.site-work-note-view h4 {
+body.site-work-note-view div.note-view-content h4 {
 	border-bottom: 1px solid rgba(10,115,127,0.1);
 	font-size: 1.1em;
 	color: #0A737F;
 	}
-body.site-work-note-view h5 {
+body.site-work-note-view div.note-view-content h5 {
 	font-size: 1.0em;
 	color: #075A63;
 	}
@@ -70,9 +70,9 @@ ul.results li.note .note-title a {
 	text-decoration: none;
 	line-height: 1.5em;
 	}
-ul.results li.note:last-child {
+/*ul.results li.note:last-child {
 	border-bottom: 0px;
-	}
+	}*/
 ul.results li.note div.info-inline {
 	clear: both;
 	height: 18px;
