--- a/trunk/modules/Hydrogen/Work/Missions/css/site.mission.css
+++ b/trunk/modules/Hydrogen/Work/Missions/css/site.mission.css
@@ -678,3 +678,57 @@ body.controller-work-mission input[type="checkbox"] {
 	text-overflow: ellipsis;
 /*	padding: 3px 0px;*/
 	}
+
+
+
+/*  --  MISSION EDITOR  --  */
+body.controller-work-mission input.changed,
+body.controller-work-mission select.changed,
+body.controller-work-mission textarea.changed {
+	background-color: #FFFFDF;
+	}
+body.controller-work-mission .CodeMirror {
+	border: 1px solid rgb(204, 204, 204);
+	background-color: white;
+	border-radius: 4px;
+	z-index: 0;
+	}
+body.controller-work-mission #descriptionAsMarkdown {
+	padding: 0.5em 1.5em;
+	border: 1px solid rgba(127,127,127,0.75);
+	box-shadow: 2px 2px 2px rgba(127,127,127,0.5);
+	border-radius: 0.3em;
+	background-color: #F7F7F7;
+	}
+body.controller-work-mission #descriptionAsMarkdown h1,
+body.controller-work-mission #descriptionAsMarkdown h2,
+body.controller-work-mission #descriptionAsMarkdown h3,
+body.controller-work-mission #descriptionAsMarkdown h4,
+body.controller-work-mission #descriptionAsMarkdown h5 {
+	line-height: 1.5em;
+	padding: 0px;
+	border-bottom: 1px solid rgba(127,127,127,0.125);
+	}
+body.controller-work-mission #descriptionAsMarkdown h1 {
+	font-size: 2em;
+	}
+body.controller-work-mission #descriptionAsMarkdown h2 {
+	font-size: 1.6em;
+	}
+body.controller-work-mission #descriptionAsMarkdown h3 {
+	font-size: 1.4em;
+	}
+body.controller-work-mission #descriptionAsMarkdown h4 {
+	font-size: 1.2em;
+	}
+body.controller-work-mission #descriptionAsMarkdown h5 {
+	font-size: 1.1em;
+	}
+body.controller-work-mission #descriptionAsMarkdown del {
+	color: #777;
+	}
+
+body.controller-work-mission .tabbable .nav{
+	margin-bottom: 1px;
+	}
+
