Modules/Hydrogen: Updated module UI:Helper:Content.

--- a/UI/Helper/Content/css/links.css
+++ b/UI/Helper/Content/css/links.css
@@ -20,7 +20,7 @@
 	background-position: 2px 1px;
 	padding: 1px 5px 1px 21px;
 	display: inline !important;
-	vertical-align: middle !important;
+	vertical-align: baseline !important;
 	margin: 0px !important;
 	}
 /*
