--- a/UI/JS/Darkbox/css/darkbox.css
+++ b/UI/JS/Darkbox/css/darkbox.css
@@ -12,8 +12,8 @@
 #darkbox-container figure {
 	padding: 0;
 	margin: 0;
-	width: 100%;
-	height: 100%;
+/*	width: 100%;
+	height: 100%;*/
 	vertical-align: middle;
 	text-align: center;
 	}
@@ -22,8 +22,8 @@
 #darkbox-container figure div {
 	padding: 0;
 	margin: 0;
-	height: 100%;
-	width: 100%;
+/*	height: 100%;
+	width: 100%;*/
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -58,9 +58,9 @@
 	bottom: 10%;
 	}
 
-#darkbox-container figure div img{
+#darkbox-container figure div img {
 	width: auto;
-	height: 100%;
+	max-height: 100%;
 	}
 
 #darkbox-container .darkbox-button-close {
