--- a/trunk/modules/Hydrogen/Work/Missions/css/site.mission.css
+++ b/trunk/modules/Hydrogen/Work/Missions/css/site.mission.css
@@ -138,7 +138,8 @@ button.task-add span {
 #input_dayWork,
 #input_dayDue,
 #input_dayStart,
-#input_dayEnd {
+#input_dayEnd,
+input.datepicker {
 	background-image: url(http://img.int1a.net/famfamfam/silk/calendar.png);
 	background-repeat: no-repeat;
 	background-position: 5px 50%;
@@ -425,7 +426,7 @@ table tr th .sortable.right {
 	}
 
 /*  --  MISSION CALENDAR  --  */
-#mission-calendar {
+#mission-calendar table {
 	position: relative;
 	border: 1px solid #7F7F7F;
 	table-layout: fixed;
@@ -549,10 +550,14 @@ table tr th .sortable.right {
 	background-color: rgba(0,255,0,0.20);
 	}
 #mission-calendar-control {
+	margin-bottom: 0.5em;
+	}
+#mission-calendar-control-label {
+	display: inline-block;
 	padding-left: 1em;
 	}
-#mission-calendar-control .month-label,
-#mission-calendar-control .year-label {
+#mission-calendar-control-label .month-label,
+#mission-calendar-control-label .year-label {
 	font-weight: lighter;
 	font-size: 1.4em;
 	}
